@@ -967,7 +967,7 @@ sinumber|1
 sonumber|1
 yearend|1
 businessnumber|1
-version|1.3.3
+version|1.3.4
 closedto|\N
 revtrans|1
 ponumber|1
